# serial-adapter

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES_v0.3.0.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: plugin-ci.yml
.husky/: pre-commit
docs/: architecture.md  development.md  protocol.md  windows-runtime-playbook.md
docs/release/: BASELINE_2026-02-24.md  LONG_TERM_OPTIMIZATION_ROADMAP.md  OFFICIAL_GUIDELINES_MAP.md  PRE_PR_CHECKLIST.md
examples/: runtime_ops.py
firmware/uno_mpu6050_servo_runtime/: uno_mpu6050_servo_runtime.ino
plugins/algorithm_blocks/: README.md  __init__.py  base.py  example_pipeline_with_serial.py  fft_block.py  kalman_block.py  llm_api.py  moving_average_block.py  pid_block.py  pipeline.py  self_test.py
plugins/algorithm_blocks_ts/: README.md  package-lock.json  package.json  tsconfig.json
plugins/openclaw_ts_bridge/: README.md  bridge.js  command_schema.json  config.json  control_plane.js  llm_command_schema.json  llm_command_translator.js  send_llm_command.js  upload_with_pause.js
plugins/serial_adapter/: README.md  plugin.py  ring_buffer.py  self_test.py  (+4 more)
python/: __main__.py  plugin.py  ring_buffer.py  statistics.py  tcp_server.py
scripts/: deploy_local_extension.ps1  hardware_e2e_check.py  preflight_runtime_guard.ps1  prepare.mjs  quick_self_check.js  regression_guard.py  repeatable_validation.ps1  self_verify_gate.ps1  semantic_e2e_check.ps1
src/: launcher.ts  tcp-client.ts  types.ts
tests/: conftest.py  test_adapter.py  test_ring_buffer.py
(+14 files in other folders)
