[project]
name = "openclaw-serial-adapter"
version = "0.3.0"
description = "Serial device telemetry adapter plugin for OpenClaw"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
